# rustFrida

./: .gitignore  Cargo.toml  README.md
agent/: Cargo.toml  build.rs
agent/src/: communication.rs  crash_handler.rs  exec_mem.rs  lib.rs  memory_dump.rs  quickjs_loader.rs  stalker.rs  vma_name.rs
agent/src/trace/: arm64_analysis.rs  arm64_codegen.rs  mod.rs  ptrace_ops.rs  transformer.rs
frida-build/src/: lib.rs
frida-gum-sys/: build.rs
frida-gum/src/: backtracer.rs  cpu_context.rs  debug_symbol.rs  interceptor.rs  lib.rs  memory_access_monitor.rs  memory_range.rs  module.rs  module_map.rs  process.rs  range_details.rs  stalker.rs
frida-gum/src/instruction_writer/aarch64/: relocator.rs  writer.rs
frida-gum/src/instruction_writer/arm/: writer.rs
frida-gum/src/instruction_writer/x86_64/: relocator.rs  writer.rs
frida-gum/src/interceptor/: invocation_listener.rs
frida-gum/src/script/: backend.rs  context.rs  data.rs  scheduler.rs
frida-gum/src/stalker/: event_sink.rs  transformer.rs
ldmonitor/: build.rs
ldmonitor/src/: lib.rs
qbdi-helper/: build.rs
qbdi-helper/src/: state.rs  trace_api.rs  vm_api.rs  writer.rs
qbdi/src/: callback.rs  lib.rs  memory.rs  state.rs  vm.rs
quickjs-hook/: build.rs
quickjs-hook/src/: context.rs  hook_engine.c  hook_engine.h  lib.rs  value.rs
quickjs-hook/src/jsapi/: callback_util.rs  hook_api.rs  ptr.rs  util.rs
rust_frida/: build.rs
rust_frida/src/: args.rs  communication.rs  injection.rs  logger.rs  main.rs  process.rs  props.rs  repl.rs  selinux.rs  spawn.rs  types.rs
zymbiote/: build.sh  zymbiote.c
(+48 files in other folders)
