[package]
name = "agent"
version = "0.1.0"
edition = "2021"
description = "Frida agent for ARM64 Android"

[features]
default = ["quickjs"]
frida-gum = ["dep:frida-gum"]
qbdi = ["dep:qbdi"]
quickjs = ["dep:quickjs-hook"]

[dependencies]
frida-gum = { path = "../frida-gum", features = [
    "event-sink",
    "invocation-listener",
    "std"
], optional = true }
qbdi = { path = "../qbdi", optional = true }
quickjs-hook = { path = "../quickjs-hook", optional = true }
libc = "1.0.0-alpha.1"
jni = "0.21.1"
once_cell = "1.21.3"
lazy_static = "1.5.0"
crossbeam-channel = "0.5"
prost = "0.13"
nix = { version = "0.30.1", features = ["ptrace", "socket", "uio"] }

[build-dependencies]
cc = "1.2.29"
anyhow = { workspace = true }

[lib]
name = "agent"
crate-type = ["cdylib"]
path = "src/lib.rs"
